@@ -1,5 +1,15 @@
 2005-01-08  Jorn Baayen  <jbaayen@gnome.org>
 
+	* src/PlaylistWindow.cs:
+
+	Clean up EOS and Previous handling.
+	
+	* doc/en/Muine.PluginLib/IPlayer.xml:
+
+	Slight clean up in the UIManager example code.
+
+2005-01-08  Jorn Baayen  <jbaayen@gnome.org>
+
 	* src/ProgressWindow.cs:
 	* src/SongDatabase.cs:
 
